# serializer version: 1
# name: test_random_size1
  dict({
    '@': 100.0,
  })
# ---
# name: test_random_size2
  dict({
    'A_': 100.0,
  })
# ---
# name: test_random_size3
  dict({
    'BW': 99.69427209783292,
    'Bw': 0.3057279021670713,
  })
# ---
# name: test_random_size4
  dict({
    'CF': 60.369053326940495,
    'CN': 1.278568003835704,
    'CR': 38.27712961483139,
    'C^': 0.009322891694635342,
    'Cr': 0.06526024186244739,
    'C~': 0.0006659208353310958,
  })
# ---
